<resources>
    <string name="app_name">Jibber Jabber</string>
    <string name="chats">Chats</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="settings">Settings</string>
    <string name="re_password">Re-password</string>
    <string name="new_account">New account?  <u>Register here!</u></string>
    <string name="register_here"><u>Register here!</u></string>
    <string name="remember_me">Remember me</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="profile">Profile</string>
    <string name="messages">Messages</string>
    <string name="forum">Forum</string>
    <string name="username">Username</string>
    <string name="edit_name">Edit Name</string>
    <string name="about">About:</string>
    <string name="edit_about">Edit About</string>
    <string name="log_out">Log Out</string>
    <string name="change_status">Change Status</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="forgot_password"><u>Forgot password?</u></string>
    <string name="reset_password_info">Give us your email address so we send you
        instructions to reset your password.</string>
    <string name="welcome">Welcome to Jibber Jabber!</string>
    <string name="new_email">New Email</string>
    <string name="new_password">New Password</string>
    <string name="contact_email">Contact Email</string>
    <string name="default_status">Hi, I am using Jibber Jabber</string>
    <string name="new_status">New Status</string>
    <string name="status">Status:</string>
    <string name="email2">Email:</string>
    <string name="start_message">Start Message</string>
    <string name="empty_messages">No messages found. <u>Start a conversation!</u></string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="post">Post</string>
    <string name="cancel">Cancel</string>
    <string name="item_search_chat">Search Chat</string>
    <string name="search_chat">Search chat&#8230;</string>
    <string name="write_new_post">Write new post&#8230;</string>
</resources>
