<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <Button
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="40dp"
        android:fontFamily="@font/baloo"
        android:text="@string/login"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/login_forgot_password_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_password_entry" />

    <EditText
        android:id="@+id/login_email_entry"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="17dp"
        android:autofillHints="@string/email"
        android:ellipsize="end"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:textColor="#000000"
        android:textColorHint="@color/grey"
        android:textCursorDrawable="@drawable/black_cursor"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/login_password_entry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_jibber_jabber_icon" />

    <EditText
        android:id="@+id/login_password_entry"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="11dp"
        android:autofillHints="@string/password"
        android:ellipsize="start"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textColor="#000000"
        android:textColorHint="@color/grey"
        android:textCursorDrawable="@drawable/black_cursor"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_email_entry" />

    <TextView
        android:id="@+id/login_register_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        android:layout_marginBottom="95dp"
        android:fontFamily="@font/baloo"
        android:text="@string/new_account"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/login_remember_me_checkbox"
        app:layout_constraintTop_toBottomOf="@+id/login_forgot_password_text" />

    <CheckBox
        android:id="@+id/login_remember_me_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="22dp"
        android:buttonTint="@color/colorPrimary"
        android:fontFamily="@font/baloo"
        android:text="@string/remember_me"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/login_forgot_password_text"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/login_forgot_password_text" />

    <ImageView
        android:id="@+id/login_jibber_jabber_icon"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="103dp"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="44dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/jibber_jabber_icon"
        app:layout_constraintBottom_toTopOf="@+id/login_email_entry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_forgot_password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="27dp"
        android:fontFamily="@font/baloo"
        android:text="@string/forgot_password"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/login_register_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/login_remember_me_checkbox"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />

</androidx.constraintlayout.widget.ConstraintLayout>