<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/reset_password_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResetPasswordActivity">

    <Button
        android:id="@+id/reset_password_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="111dp"
        android:fontFamily="@font/baloo"
        android:onClick="onResetPassword"
        android:text="@string/reset_password"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reset_password_email_entry" />

    <EditText
        android:id="@+id/reset_password_email_entry"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="30dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/email"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:textColorHint="@color/grey"
        android:textCursorDrawable="@drawable/black_cursor"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/reset_password_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reset_password_info_label" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="256dp"
        android:layout_height="0dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="21dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toTopOf="@+id/reset_password_forgot_password_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/jibber_jabber_icon" />

    <TextView
        android:id="@+id/reset_password_forgot_password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/baloo"
        android:text="@string/forgot_password"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/reset_password_info_label"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:text="@string/forgot_password" />

    <TextView
        android:id="@+id/reset_password_info_label"
        android:layout_width="336dp"
        android:layout_height="63dp"
        android:layout_marginStart="34dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="22dp"
        android:fontFamily="@font/baloo"
        android:text="@string/reset_password_info"
        android:textColor="@color/grey"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/reset_password_email_entry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reset_password_forgot_password_label"
        tools:text="@string/reset_password_info" />
</androidx.constraintlayout.widget.ConstraintLayout>