<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsFragment">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="88dp"
        tools:layout_editor_absoluteY="102dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/settings_profile_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/settings_profile_image"
                android:layout_width="256dp"
                android:layout_height="256dp"
                android:layout_gravity="center"
                android:src="@drawable/default_profile_icon" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/settings_image_button_layout"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/settings_gallery_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:elevation="0dp"
                    android:focusable="true"
                    android:scaleType="center"
                    android:src="@drawable/gallery_icon" />

                <Space
                    android:layout_width="50dp"
                    android:layout_height="match_parent" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/settings_camera_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:elevation="0dp"
                    android:focusable="true"
                    android:scaleType="center"
                    android:src="@drawable/camera_icon" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <TextView
                android:id="@+id/settings_username_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/baloo"
                android:singleLine="true"
                android:text="@string/username"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/settings_status_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/baloo"
                android:gravity="center"
                android:maxLines="3"
                android:minLines="1"
                android:textAlignment="center"
                android:textColor="#747272"
                android:textSize="22sp"
                tools:text="@string/default_status" />

            <Button
                android:id="@+id/settings_change_status_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/baloo"
                android:scaleType="center"
                android:text="@string/change_status"
                android:textColor="#000000"
                android:textSize="20sp" />

            <Button
                android:id="@+id/settings_change_email_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/baloo"
                android:text="@string/change_email"
                android:textColor="#000000"
                android:textSize="20sp" />

            <Button
                android:id="@+id/settings_change_password_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/baloo"
                android:text="@string/change_password"
                android:textColor="#000000"
                android:textSize="20sp" />

            <Button
                android:id="@+id/settings_log_out_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/baloo"
                android:text="@string/log_out"
                android:textColor="#000000"
                android:textSize="20sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>