<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/start_topic_layout"
    android:layout_width="match_parent"
    android:layout_height="375dp">

    <TextView
        android:id="@+id/start_topic_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="22dp"
        android:layout_marginBottom="7dp"
        android:text="@string/title"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/start_topic_title_entry"
        app:layout_constraintStart_toStartOf="@+id/start_topic_title_entry"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/start_topic_body_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:text="@string/body"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/start_topic_body_entry"
        app:layout_constraintStart_toStartOf="@+id/start_topic_body_entry"
        app:layout_constraintTop_toBottomOf="@+id/start_topic_title_entry" />

    <EditText
        android:id="@+id/start_topic_title_entry"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="19dp"
        android:ems="10"
        android:inputType="text"
        android:textColor="#000000"
        android:textCursorDrawable="@drawable/black_cursor"
        app:layout_constraintBottom_toTopOf="@+id/start_topic_body_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_topic_title_text" />

    <EditText
        android:id="@+id/start_topic_body_entry"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="143dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="25dp"
        android:ems="10"
        android:gravity="top|start"
        android:inputType="textMultiLine"
        android:lines="3"
        android:textColor="#000000"
        android:textCursorDrawable="@drawable/black_cursor"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/start_topic_cancel_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/start_topic_post_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginBottom="39dp"
        android:text="@string/post"
        android:textColor="#000000"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/start_topic_cancel_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_topic_body_entry"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/start_topic_cancel_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="43dp"
        android:layout_marginBottom="39dp"
        android:text="@string/cancel"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/start_topic_post_button"
        app:layout_constraintTop_toBottomOf="@+id/start_topic_body_entry" />
</androidx.constraintlayout.widget.ConstraintLayout>
